# dev-tools

./: CLAUDE.md  README.md  angular.json  package-lock.json  package.json
.claude/: settings.local.json
src/: main.ts  styles.scss
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.routes.ts
src/app/components/sidebar/: sidebar.component.html  sidebar.component.scss  sidebar.component.ts
src/app/core/: tauri.service.ts
src/app/tools/csv-analyzer/: csv-analyzer.component.html  csv-analyzer.component.scss  csv-analyzer.component.spec.ts  csv-analyzer.component.ts
src/app/tools/csv-analyzer/example-data/: sample-data-with-errors.csv  sample-data.csv
src/app/tools/directory-tree/: directory-tree.component.html  directory-tree.component.scss  directory-tree.component.spec.ts  directory-tree.component.ts
src/app/tools/hello-world/: hello-world.component.html  hello-world.component.scss  hello-world.component.ts
